Add project file

--- a/1. Install RStudio.ipynb
+++ b/1. Install RStudio.ipynb
@@ -92,7 +92,7 @@
    "source": [
     "Now that we've installed R, we can install RStudio. Navigate to the [RStudio downloads page](https://rstudio.com/products/rstudio/download/).\n",
     "\n",
-    "The screenshots we use to illustrate steps were taken on a machine running Ubuntu and RStudio version 1.1.453. Users of different operating systems will generally follow the same steps, but we'll let us know if there are specific differences.\n",
+    "The screenshots we use to illustrate steps were taken on a machine running Ubuntu and RStudio version 1.1.453. Users of different operating systems will generally follow the same steps, but we'll let know if there are specific differences.\n",
     "\n",
     "When we reach the RStudio downloads page, select the `RStudio Desktop Open Source License FREE` option. This should take us to the following page:\n",
     "\n",
@@ -188,7 +188,7 @@
     "\n",
     "**mean(vector_1)**\n",
     "\n",
-    "Notice that as we begin typing mean() into the console, a list of functions beginning with \"m\" pops up. We can either use our touchpad, mouse, or the arrow keys on our keyboard to select a function, and it will appear in the console.\n",
+    "Notice that as we begin typing `mean()` into the console, a list of functions beginning with \"m\" pops up. We can either use our touchpad, mouse, or the arrow keys on our keyboard to select a function, and it will appear in the console.\n",
     "\n",
     "![image.png](attachment:image.png)"
    ]
@@ -254,7 +254,7 @@
     "\n",
     "There are a few ways to set the working directory in RStudio.\n",
     "\n",
-    "* Use the `setwd()` function. For example, if we wanted to set my working directory to my desktop, we would type: setwd(\"~/Desktop\").\n",
+    "* Use the `setwd()` function. For example, if we wanted to set my working directory to my desktop, we would type: `setwd(\"~/Desktop\")`.\n",
     "* Navigate to and choose the working directory from the `Session` menu:\n",
     "\n",
     "![image.png](attachment:image.png)"
@@ -286,7 +286,7 @@
     "\n",
     "If we import data into R using the `Import Dataset` feature, the data will be automatically displayed in a tab in the window in the top left of the interface.\n",
     "\n",
-    "If we import our data into R by typing functions `like read_csv()` in the console, R does not automatically open the data file. To display our data, use the function `View()`.\n",
+    "If we import our data into R by typing functions `like read_csv()` in the `console`, R does not automatically open the data file. To display our data, use the function `View()`.\n",
     "\n",
     "**View(recent_grads)**\n",
     "\n",
@@ -406,6 +406,9 @@
     "To open a saved script, we can use either of the following methods:\n",
     "\n",
     "* Go to `File > Open File` and navigate to the script.\n",
+    "\n",
+    "    or\n",
+    "    \n",
     "* Navigate to the script in the `Files` tab in the window in the bottom right screen of the interface:\n",
     "\n",
     "![image.png](attachment:image.png)"
@@ -435,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
