--- a/6.Working with Data Frames.ipynb
+++ b/6.Working with Data Frames.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "We've worked with vectors, matrices, and lists as we calculated final grades, ranked universities, and organized club data. In this file, we'll analyze data on college (university) majors (areas of study) as we learn to work with another of R's data structures: __data frames__.\n",
     "\n",
-    "Data frames are probably the most common structures we'll work with when analyzing data in R, so we'll help to build a strong foundational understanding of how to manipulate then. Like lists, data frames can contain multiple data types. Unlike lists, though, all elements of a data frame are vectors of equal length.\n",
+    "Data frames are probably the most common structures we'll work with when analyzing data in R, so we'll help to build a strong foundational understanding of how to manipulate them. Like lists, data frames can contain multiple data types. Unlike lists, though, all elements of a data frame are vectors of equal length.\n",
     "\n",
     "In this file, we'll also introduce to some R **packages** designed to make doing data science with data frames maximally efficient. In R, packages consist of user-contributed functions, code, and data that extend R's capabilities.\n",
     "\n",
@@ -72,7 +72,7 @@
     "\n",
     "Instead of using **base R** functions for data import, we'll learn to use a package called `readr` that contains functions for importing data of various formats into R.\n",
     "\n",
-    "The `readr` package is part of the tidyverse collection of packages. It is designed to improve the data science workflow in a few ways:\n",
+    "The `readr` package is part of the `tidyverse` collection of packages. It is designed to improve the data science workflow in a few ways:\n",
     "\n",
     "* **Speed**: Importing larger data files with `readr` functions is generally faster than using base R functions.\n",
     "* **Code reproducibility**: While base R function behavior depends in part on operating system and environment variables, this is not the case for `readr`. When we use `readr` to import files, code that works on our computer will work on someone else’s.\n",
@@ -94,7 +94,7 @@
     "\n",
     "`library(readr)`\n",
     "\n",
-    "We do not need to surround package names with quotation marks to load them using the library() function.\n",
+    "We do not need to surround package names with quotation marks to load them using the `library()` function.\n",
     "\n",
     "Let's load the readr package."
    ]
@@ -109,7 +109,7 @@
     "\n",
     "**Answer**\n",
     "\n",
-    "* library(readr)"
+    "* `library(readr)`"
    ]
   },
   {
@@ -140,11 +140,11 @@
    "source": [
     "**Task**\n",
     "\n",
-    "* Use the read_csv() function to import the file \"recent_grads.csv\" into R.\n",
+    "* Use the `read_csv()` function to import the file `\"recent_grads.csv\"` into R.\n",
     "\n",
     "**Answer**\n",
     "\n",
-    "* recent_grads <- read_csv(\"recent_grads.csv\")"
+    "* `recent_grads <- read_csv(\"recent_grads.csv\")`"
    ]
   },
   {
@@ -173,20 +173,20 @@
     "\n",
     "* **Identity and Dimensions**: At the top left of the output we'll see this line: `A tibble: 173 x 18`, which tells us that we have imported and stored our data as a **tibble**, which is a specific type of data frame in R. The following numbers specify the tibble dimensions (rows x columns).\n",
     "\n",
-    "Let's talk more about [tibbles](https://cran.r-project.org/web/packages/tibble/vignettes/tibble.html). When we use the `readr` package to import our data into R, the result is a special type of data frame called a tibble. Tibbles are the same as data frames in base R in a few ways: They are two-dimensional data structures and can store data of multiple types."
+    "Let's talk more about [tibbles](https://cran.r-project.org/web/packages/tibble/vignettes/tibble.html). When we use the `readr` package to import our data into R, the result is a special type of data frame called a `tibble`. Tibbles are the same as data frames in base R in a few ways: They are two-dimensional data structures and can store data of multiple types."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are introducing the `readr` package and tibbles because they have several important advantages for doing data science:\n",
+    "We are introducing the `readr` package and `tibbles` because they have several important advantages for doing data science:\n",
     "\n",
     "* **Conservative printing**: We can type the name of a tibble and R will only print the first 10 rows; this prevents accidentally wasting time as thousands of rows of data print, as can happen with base R data frames.\n",
     "* **Clarity**: When we print a tibble, the data type for each column is conveniently listed alongside the name.\n",
     "* **Consistency**: Unlike base R data frames, tibbles will never change the type of the inputs, the names of variables, or the row names. This will be important when we share our code with colleagues.\n",
     "\n",
-    "Since tibbles are specialized data frames, we can refer to them as `\"tibbles\" or \"data frames\"` interchangeably. We will simply refer to them as \"data frames\"."
+    "Since tibbles are specialized data frames, we can refer to them as `\"tibbles\"` or `\"data frames\"` interchangeably. We will simply refer to them as `\"data frames\"`."
    ]
   },
   {
@@ -217,7 +217,7 @@
     "\n",
     "We can also index to extract a subset of values, as we learned to do for matrices.\n",
     "\n",
-    "If we wanted to extract the fifth row of the `Major` column in the recent_grads data frame, we can write:\n",
+    "If we wanted to extract the fifth row of the `Major` column in the `recent_grads` data frame, we can write:\n",
     "\n",
     "`recent_grads[5,3]`\n",
     "\n",
@@ -242,8 +242,8 @@
     "\n",
     "**Answer**\n",
     "\n",
-    "* college_majors <- recent_grads$Major\n",
-    "* unemployment_subset <- recent_grads[c(1,3,5), \"Unemployment_rate\"]"
+    "* `college_majors <- recent_grads$Major`\n",
+    "* `unemployment_subset <- recent_grads[c(1,3,5), \"Unemployment_rate\"]`"
    ]
   },
   {
@@ -267,7 +267,7 @@
    "source": [
     "Let's start by simplifying our data frame to contain only variables that are important for our analysis. We'll do this by selecting a subset of the columns.\n",
     "\n",
-    "While we could index the data frame to return a subset of columns, we'll introduce tools in a tidyverse package designed specifically for analyzing data in data frames: **`dplyr`**.\n",
+    "While we could index the data frame to return a subset of columns, we'll introduce tools in a `tidyverse package` designed specifically for analyzing data in data frames: **`dplyr`**.\n",
     "\n",
     "Here's the code we would write to install and load the package:\n",
     "\n",
@@ -311,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Task**\n",
+    "# **Task**\n",
     "\n",
     "* Create a new data frame, recent_grads_select, that contains only the following variables from recent_grads:\n",
     "\n",
@@ -382,7 +382,7 @@
     "\n",
     "Remember to use the pipe operator to specify the data frame we're working on and then the function we want to apply.\n",
     "\n",
-    "Now, let's change our recent_grads_select data frame so that it contains a new column with the variable Women_percent."
+    "Now, let's change our `recent_grads_select` data frame so that it contains a new column with the variable `Women_percent`."
    ]
   },
   {
@@ -473,11 +473,11 @@
    "source": [
     "In the example above, all college majors in `data_frame_1` meet at least one of the criteria we specified. We can think of the criteria we want our college majors to meet as being described by the following statement:\n",
     "\n",
-    "\"Majors that are either in the engineering category **or** have over 1,000 graduates\"\n",
+    "`\"Majors that are either in the engineering category or have over 1,000 graduates\"`\n",
     "\n",
     "When we write code to specify that we are filtering for rows of our data frame that meet these criteria, we will use an operator to denote the **or** in the statement above: **`|`**. When we are filtering by multiple criteria, the `|` operator specifies we want to retain rows of our data frame that meet **at least one of** the criteria we specify.\n",
     "\n",
-    "To use filter() to create a new data frame containing college majors that are either in the engineering category or have more than 1,000 total graduates, we would write:\n",
+    "To use `filter()` to create a new data frame containing college majors that are either in the engineering category or have more than 1,000 total graduates, we would write:\n",
     "\n",
     "`data_frame_2 <- data_frame_1 %>% filter(Major_category == \"Engineering\" | Total > 1000)`\n",
     "\n",
@@ -527,7 +527,7 @@
     "`data_frame_2 <- data_frame_1 %>% \n",
     "    filter(Major_category == \"Engineering\" & Total > 1000)`\n",
     "    \n",
-    "Let's create a new data frame containing only college majors that meet all three of our criteria for college majors. To accomplish this, we'll use `filter()` and the `&` operator to filter rows in the recent_grads_science data frame to retain only majors that have women as greater than 40 percent of total graduates and median salaries above 40,000 USD."
+    "Let's create a new data frame containing only college majors that meet all three of our criteria for college majors. To accomplish this, we'll use `filter()` and the `&` operator to filter rows in the `recent_grads_science` data frame to retain only majors that have women as greater than 40 percent of total graduates and median salaries above 40,000 USD."
    ]
   },
   {
@@ -536,7 +536,7 @@
    "source": [
     "**Task**\n",
     "\n",
-    "* Filter the recent_grads_science data frame to create a new data frame containing only data on college majors meeting both the following criteria:\n",
+    "* Filter the `recent_grads_science` data frame to create a new data frame containing only data on college majors meeting both the following criteria:\n",
     "\n",
     " * Median >= 40000\n",
     " * Women_percent > 40\n",
@@ -553,7 +553,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now have a data frame, potential_majors, containing data for seven college majors that fit our criteria:\n",
+    "We now have a data frame, `potential_majors`, containing data for seven college majors that fit our criteria:\n",
     "\n",
     "* Physical and life sciences\n",
     "* Recent graduates must have a median salary above 40,000 USD\n",
@@ -585,7 +585,7 @@
    "source": [
     "Let's arrange our data frame in order of **ascending** unemployment rate. We'll want entire rows of the data frame arranged in order of unemployment rate, from lowest to highest.\n",
     "\n",
-    "To arrange our data frame rows by Unemployment_rate, we'll use another function in the `dplyr` package: `arrange()`.\n",
+    "To arrange our data frame rows by `Unemployment_rate`, we'll use another function in the `dplyr` package: `arrange()`.\n",
     "\n",
     "The `arrange()` function lets us specify a variable we want to use to re-order the rows of our data frame. Let's say we want to arrange `data_frame_1` by `Total`:\n",
     "\n",
@@ -600,7 +600,7 @@
     "\n",
     "We can also use `arrange()` to order rows of a data frame by a variable in **descending** instead of ascending order; that is, from largest to smallest. To specify that we want to arrange rows by a variable in descending order, we can surround variables with `desc()`, short for \"descending\".\n",
     "\n",
-    "For example, if we want to re-order data_frame_1 in order of Total from largest to smallest, we can write:\n",
+    "For example, if we want to re-order `data_frame_1` in order of Total from largest to smallest, we can write:\n",
     "\n",
     "`data_frame_2 <- data_frame_1 %>% arrange(desc(Total))`"
    ]
@@ -682,7 +682,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
