--- a/5.Working With Lists.ipynb
+++ b/5.Working With Lists.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the last file, we worked with matrices to analyze university rankings and choose a university for you to attend. Now that you're about to begin your first year at Harvard, you're deciding on clubs to join so that you can make friends with similar interests. You have many diverse interests in sports, art, and music, and decide to explore a variety of activities.\n",
+    "In the last file, we worked with matrices to analyze university rankings and choose a university to attend. Now that we're about to begin our first year at Harvard, we're deciding on clubs to join so that we can make friends with similar interests. We have many diverse interests in sports, art, and music, and decide to explore a variety of activities.\n",
     "\n",
     "In this file, we'll learn how to work with data stored in lists as we organize the results of our investigation of different university clubs.\n",
     "\n",
@@ -59,7 +59,7 @@
    "source": [
     "**Task**\n",
     "\n",
-    "* Store the following club names in a list called uni_clubs:\n",
+    "* Store the following club names in a list called `uni_clubs`:\n",
     " - \"ballroom dancing\"\n",
     " - \"rugby\"\n",
     " - \"bird watching\"\n",
@@ -91,7 +91,7 @@
    "source": [
     "Note that each club we stored in the list appears on its own line, and its position within the list in shown brackets above it. In this list, the numbers one through four tell us the order of the objects stored in the list.\n",
     "\n",
-    "The uni_clubs list contains only single elements of character data type. However, that lists may contain objects of any data type. We're able to use them to store other information from our club search including club descriptions, types of activities, the cost of club dues, and the times when the club meets.\n",
+    "The `uni_clubs` list contains only single elements of `character` data type. However, that lists may contain objects of any data type. We're able to use them to store other information from our club search including club descriptions, types of activities, the cost of club dues, and the times when the club meets.\n",
     "\n",
     "Here are some of the data we've gathered for the chess club:\n",
     "\n",
@@ -127,7 +127,7 @@
     "\n",
     "1. Create a matrix, called `club_meetings`, containing the `meeting_days` and `meeting_times`. Organize the matrix so that `meeting_days` is the first row.\n",
     "\n",
-    "2. Store the following objects, in this order, in a list called chess_club:\n",
+    "2. Store the following objects, in this order, in a list called `chess_club`:\n",
     "\n",
     "    - club_title\n",
     "    - club_description\n",
@@ -154,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We've now created the list `chess_club` to organize the information you gathered about the club:\n",
+    "We've now created the list `chess_club` to organize the information we gathered about the club:\n",
     "\n",
     "![image.png](attachment:image.png)"
    ]
@@ -174,7 +174,7 @@
     "\n",
     "`rugby_club <- list(club_title = c(\"Rugby Club\"), club_description = c(\"Plays matches against clubs from local universities\"), club_dues = c(100, 50))`\n",
     "\n",
-    "The resulting list, rugby_club, contains three objects with names assigned to them:\n",
+    "The resulting list, `rugby_club`, contains three objects with names assigned to them:\n",
     "\n",
     "![image.png](attachment:image.png)"
    ]
@@ -247,7 +247,7 @@
     "* Single brackets to return a **list of selected elements** ([])\n",
     "* Double brackets to return a **single element** ([[]])\n",
     "\n",
-    "Let's take the rugby_club list as an example:\n",
+    "Let's take the `rugby_club` list as an example:\n",
     "\n",
     "![image.png](attachment:image.png)"
    ]
@@ -297,7 +297,7 @@
     "\n",
     "`rugby_club[c(1,3)]`\n",
     "\n",
-    "The output consists of a list of the first and third vectors that we stored in rugby_club:\n",
+    "The output consists of a list of the first and third vectors that we stored in `rugby_club`:\n",
     "\n",
     "![image.png](attachment:image.png)"
    ]
@@ -306,7 +306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What happens if we use double brackets to index rugby_club?\n",
+    "What happens if we use double brackets to index `rugby_club`?\n",
     "\n",
     "`rugby_club[[c(3,2)]]`\n",
     "\n",
@@ -365,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To replace the `club_dues` values in the rugby_club list with the new costs we would write:\n",
+    "To replace the `club_dues` values in the `rugby_club` list with the new costs we would write:\n",
     "\n",
     "`rugby_club$club_dues <- c(110, 60)`"
    ]
@@ -409,7 +409,7 @@
     "\n",
     "As we've researched the clubs we're interested in, we've found some information on the number of first-, second-, third-, and fourth-year university students who participated in the club during fall and spring semesters last year.\n",
     "\n",
-    "For the rugby club, we've organized the information in the form of numeric data in a matrix named `member_years_rugby`:\n",
+    "For the `rugby club`, we've organized the information in the form of numeric data in a matrix named `member_years_rugby`:\n",
     "\n",
     "![image.png](attachment:image.png)"
    ]
@@ -437,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'd like to add this matrix as an object to the rugby_club list, which currently contains three objects:\n",
+    "We'd like to add this matrix as an object to the `rugby_club` list, which currently contains three objects:\n",
     "\n",
     "![image.png](attachment:image.png)"
    ]
@@ -466,7 +466,7 @@
    "source": [
     "Recall that elements added to a list do not have names associated with them unless we specify them.\n",
     "\n",
-    "We could assign a name to the object. If we want to append member_years_rugby to rugby_club and give it a name, we would write:\n",
+    "We could assign a name to the object. If we want to append `member_years_rugby` to `rugby_club` and give it a name, we would write:\n",
     "\n",
     "`rugby_club[[\"member_years_rugby\"]] <- member_years_rugby`"
    ]
@@ -477,7 +477,8 @@
    "source": [
     "We've researched chess club membership and found the following numbers of first-year members that joined during the fall and spring semesters last year:\n",
     "\n",
-    "`Fall Semester: 12 Spring Semester: 15`"
+    "`Fall Semester: 12 \n",
+    "Spring Semester: 15`"
    ]
   },
   {
@@ -486,7 +487,7 @@
    "source": [
     "**Task**\n",
     "\n",
-    "Add this information to our chess_club list.\n",
+    "Add this information to our `chess_club` list.\n",
     "\n",
     "**Answer**\n",
     "\n",
@@ -544,7 +545,7 @@
     "\n",
     "`uni_club_list <- list(rugby_club = rugby_club, ballroom_dancing = ballroom_dancing)`\n",
     "\n",
-    "The resulting list contains the two lists, rugby_club and ballroom_dance, as objects:\n",
+    "The resulting list contains the two lists, `rugby_club` and `ballroom_dance`, as objects:\n",
     "\n",
     "![image.png](attachment:image.png)"
    ]
@@ -572,7 +573,7 @@
     " \n",
     "* Instead of combining the list objects into a single list, create a list of lists by using the `list()` function.\n",
     "\n",
-    "* Write a code so that each list within uni_clubs is named. Keep the original list names.\n",
+    "* Write a code so that each list within `uni_clubs` is named. Keep the original list names.\n",
     "\n",
     "**Answer**\n",
     "\n",
@@ -608,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
